<resources>

    <string name="language">English</string>
    <string name="langcode">en</string>
    <string name="app_name">DemoATO</string>
    <string name="penregistration">Registration Status</string>
    <string name="registration">Self Registration</string>
    <string name="vregistration">Vehicle Registration</string>
    <string name="mobile">Mobile</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="dob">D.O.B</string>
    <string name="emailid">Email Id</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="alternate_mobile">Alternate Mobile</string>
    <string name="STEP_FIRST">STEP FIRST</string>
    <string name="final1">FINAL</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="uploadvdoc">Upload Vehicle Document</string>
    <string name="uploaddoc">Upload Self Document</string>
    <string name="rcupload">Upload</string>
    <string name="upload">Upload</string>
    <string name="adphoto">Aadhar Photo</string>
    <string name="pnphoto">Pancard Photo</string>
    <string name="drphoto">License Photo</string>
    <string name="selfphoto">Selfie Photo</string>
    <string name="rcphoto">RC Photo</string>
    <string name="inphoto">Insurance Photo</string>
    <string name="puphoto">PUC Photo</string>
    <string name="adhrno">Aadhar Card Number</string>
    <string name="panno">Pan Card Number</string>
    <string name="drno">Driving License </string>
    <string name="vrno">Vehicle Registration Number</string>
    <string name="insdt">Insurance Expiry Date</string>
    <string name="pucdt">PUC Expiry Date</string>
    <string name="vt">Vehical Type</string>
    <string name="cng">CNG</string>
    <string name="disel">Disel</string>
    <string name="elec">Electric</string>
    <string name="petrol">Petrol</string>
    <string name="bankdetail">Banking Details</string>
    <string name="bankaccname">Bank Acc Name</string>
    <string name="bankaccnum">Account Number</string>
    <string name="bankbranch">Branch</string>
    <string name="bankifsc">IFSC Number</string>
    <string name="bankname">Bank Name</string>
    <string name="vmake">Vehicle Make</string>
    <string name="vmodel">Model</string>
    <string name="stand">Select Stand</string>
    <string name="stand1">Old Shahabad Stand</string>
    <string name="stand2">Jai Karnataka Stand</string>
    <string name="stand3">Jayanagar Autorickshaw Stand</string>
    <string name="passbook">Passbook Photo</string>
    <string name="status1">Self Details</string>
    <string name="status2">Self Documentation</string>
    <string name="status3">Vehicle Documentation</string>
    <string name="status4">Banking Details</string>
    <string name="myloc">My Location</string>
    <string name="duty">Duty</string>
    <string name="standplate"> .         STAND</string>
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>