<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtregistration1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:text="@string/bankdetail"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtmobile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="25dp"
            android:text="Mobile"

            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/editmobile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="160dp"
            android:text=""

            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/etacnam"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/bankaccname" />
        <EditText
            android:id="@+id/etacnum"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/bankaccnum" />
        <EditText
            android:id="@+id/etifsc"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="235dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/bankifsc" />
        <EditText
            android:id="@+id/etbranch"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="295dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/bankbranch" />
        <EditText
            android:id="@+id/etbknam"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="355dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/bankname" />

        <ImageView
            android:id="@+id/imgpb"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="415dp"
            android:background="@drawable/ic_baseline_photo_camera_24"
            android:clickable="true" />
        <ImageView
            android:id="@+id/imgpbst"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="345dp"
            android:background="@drawable/ic_baseline_cloud_upload_24"
            android:layout_marginTop="465dp"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/passbook"
            android:id="@+id/txtpassbook"
            android:textSize="19sp"

            android:layout_marginTop="430dp"
            android:layout_marginLeft="180dp"/>
        <Button
            android:id="@+id/btbpupload"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="470dp"
            android:layout_marginLeft="180dp"
            android:textColor="@color/colorPrimaryLightDemo"
            android:background="@drawable/backgroud_brown"
            android:text="@string/upload"/>

        <Button
            android:id="@+id/btfinal"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="605dp"
            android:background="@drawable/backgroud_green"
            android:onClick="saveDriverRegistration"
            android:text="@string/final1"
            android:textColor="@color/colorOnPrimaryDemo" />


    </RelativeLayout>


</RelativeLayout>