<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtregistration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:text="@string/penregistration"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtstatus1"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/status1"
            android:textSize="22sp"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="25dp"
            android:gravity="left"/>
        <ImageView
            android:id="@+id/imgstatus1"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/ic_baseline_error_amber"
            android:clickable="true" />
        <TextView
            android:id="@+id/txtstatus2"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/status2"
            android:textSize="22sp"
            android:layout_marginTop="170dp"
            android:layout_marginLeft="25dp"
            android:gravity="left"/>
        <ImageView
            android:id="@+id/imgstatus2"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/ic_baseline_error_amber"
            android:clickable="true" />
        <TextView
            android:id="@+id/txtstatus3"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/status3"
            android:textSize="22sp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="250dp"
            android:gravity="left"/>
        <ImageView
            android:id="@+id/imgstatus3"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="233dp"
            android:background="@drawable/ic_baseline_error_amber"
            android:clickable="true" />
        <TextView
            android:id="@+id/txtstatus4"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/status4"
            android:textSize="22sp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="334dp"
            android:gravity="left"/>
        <ImageView
            android:id="@+id/imgstatus4"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="318dp"
            android:background="@drawable/ic_baseline_error_amber"
            android:clickable="true" />



        <ImageView
            android:id="@+id/imgrickshaw"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="568dp"
            android:background="@drawable/rickshaw"
            android:clickable="true" />
        <ImageView
            android:id="@+id/imgzebra"
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="548dp"
            android:background="@drawable/zebra"
            android:clickable="true" />
        <ImageView
            android:id="@+id/imgsignal"
            android:layout_width="120dp"
            android:layout_height="290dp"
            android:layout_marginLeft="285dp"
            android:layout_marginTop="390dp"
            android:background="@drawable/stand2"
            android:clickable="true" />
        <TextView
            android:id="@+id/txtstand"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:text="@string/standplate"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="460dp"
            android:layout_marginLeft="305dp"
            android:gravity="left"/>
    </RelativeLayout>

</RelativeLayout>