<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:text=""
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ImageView
        android:id="@+id/imgvreg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/rickshawlock"
        android:clickable="true" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etMobile"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:maxLength="10"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp"
            android:hint="@string/mobile"
            />
        <EditText
            android:id="@+id/etPwd"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            android:hint="@string/password"
            />
        <Button
            android:id="@+id/btlogin"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="385dp"
            android:background="@drawable/backgroud_green"
            android:onClick="loginDriver"
            android:text="@string/login"
            android:textColor="@color/colorOnPrimaryDemo"/>
    </RelativeLayout>

</RelativeLayout>